Feat (add what's missing): add all missing functions